Green collor palette implementation

--- a/app/src/main/res/drawable-v24/shape_button_rounded.xml
+++ b/app/src/main/res/drawable-v24/shape_button_rounded.xml
@@ -4,8 +4,8 @@
 
     <gradient
         android:angle="360"
-        android:endColor="#0A80F5"
-        android:startColor="#0BCCEB"
+        android:endColor="#006a4e"
+        android:startColor="#8abaae"
         android:type="linear"
         ></gradient>
 
