--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -19,11 +19,11 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_marginTop="30dp"
         android:contentDescription="image"
-        android:src="@drawable/download" />
+        android:src="@drawable/intro_cards" />
 
     <TextView
         android:layout_width="wrap_content"
