--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#0C90F1</color>
-    <color name="colorPrimaryDark">#0591F8</color>
-    <color name="colorAccent">#0591F8</color>
+    <color name="colorPrimary">#2e856e</color>
+    <color name="colorPrimaryDark">#006a4e</color>
+    <color name="colorAccent">#8abaae</color>
 
-    <color name="primary_text_color">#363A43</color>
-    <color name="secondary_text_color">#7A8089</color>
+    <color name="primary_text_color">#2e856e</color>
+    <color name="secondary_text_color">#5ca08e</color>
 
     <color name="snackbar_error_color">#F72400</color>
 </resources>
