Main window drawer UI

--- a/app/src/main/res/drawable/background_light.xml
+++ b/app/src/main/res/drawable/background_light.xml
@@ -4,7 +4,7 @@
 
     <gradient
         android:angle="315"
-        android:endColor="#ADFF4D"
+        android:endColor="#FBFFF7"
         android:startColor="#126A00"
         android:type="linear" />
 </shape>
