--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -75,21 +75,7 @@
                         android:focusableInTouchMode="false"
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
-                        android:textSize="16sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp">
-
-                    <androidx.appcompat.widget.AppCompatEditText
-                        android:id="@+id/et_mobile"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Mobile (test)"
-                        android:inputType="phone"
+                        android:textColor="@android:color/darker_gray"
                         android:textSize="16sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
