--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_score"
+            android:icon="@drawable/ic_score_24"
+            android:title="You should not see this" />
+
         <item
             android:id="@+id/nav_my_profile"
             android:icon="@drawable/ic_settings_24"
@@ -10,5 +16,6 @@
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_logout_24"
             android:title="@string/nav_sign_out" />
+
     </group>
 </menu>
