--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,10 @@
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_logout_24"
             android:title="@string/nav_sign_out" />
+        <item
+            android:id="@+id/nav_report_bug"
+            android:icon="@drawable/ic_bug_24"
+            android:title="@string/nav_report_bug" />
 
     </group>
 </menu>
