--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -73,7 +73,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btn_join_game"
+        android:id="@+id/btn_start_game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
