SF10-009: Player map binding

--- a/app/src/main/res/layout/item_public_player_game.xml
+++ b/app/src/main/res/layout/item_public_player_game.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_place_image_game"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:contentDescription="@string/image_content_description"
         android:src="@mipmap/ic_launcher"
         app:civ_border_color="@color/circular_image_border_color"
@@ -21,16 +20,15 @@
 
     <TextView
         android:id="@+id/tvNameGame"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/primary_text_color"
-        android:textSize="12sp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_place_image_game"
         tools:text="Name" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
